apply plugin: 'com.android.application'

android {
    compileSdkVersion 26
    buildToolsVersion "26.0.0"
    defaultConfig {
        applicationId "com.knobtviker.thermopile"
        minSdkVersion 24
        targetSdkVersion 26
        versionCode 1
        versionName "1.0"

        javaCompileOptions {
            annotationProcessorOptions {
                includeCompileClasspath false
            }
        }
    }
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
}

dependencies {
    //base
    compileOnly 'com.google.android.things:androidthings:0.4.1-devpreview'
    implementation 'com.google.android.things.contrib:driver-button:0.3'
    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
    implementation 'net.danlew:android.joda:2.9.9'
    compileOnly 'com.google.auto.value:auto-value:1.4.1'
    annotationProcessor 'com.google.auto.value:auto-value:1.4.1'
    implementation 'com.google.guava:guava-base:r03'
    implementation 'com.google.guava:guava-primitives:r03'
    implementation 'com.google.guava:guava-annotations:r03'
    implementation 'com.google.guava:guava-collections:r03'

    //presentation
    implementation 'com.android.support:appcompat-v7:26.0.0-beta2'
    implementation 'com.android.support:design:26.0.0-beta2'
    implementation 'com.android.support:recyclerview-v7:26.0.0-beta2'
    implementation 'com.jakewharton:butterknife:8.7.0'
    annotationProcessor 'com.jakewharton:butterknife-compiler:8.7.0'
    implementation 'com.bignerdranch.android:simple-item-decoration:1.0.0'
}
